--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div id="chat-header">Asistente Legio VII 🥋</div>
     <div id="chatbox"></div>
     <div style="display: flex;">
-      <input type="text" id="userInput" placeholder="Escribe tu pregunta..." />
+      <input type="text" id="userInput" placeholder="Escribe tu pregunta..." onkeydown="handleKey(event)" />
       <button onclick="sendMessage()">Enviar</button>
     </div>
   </div>
@@ -122,6 +122,12 @@
         chatbox.scrollTop = chatbox.scrollHeight;
       } catch (err) {
         chatbox.innerHTML += `<div><strong>Error:</strong> No se pudo contactar con el bot.</div>`;
+      }
+    }
+
+    function handleKey(event) {
+      if (event.key === "Enter") {
+        sendMessage();
       }
     }
   </script>
